Adapt tests to new behavior
Co-authored-by: Kevin Klein <kevin@0x002a.com>